SDKs/twilio.com/twilio_voice_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateByocTrunkRequest req = new CreateByocTrunkRequest() {{
                security = new CreateByocTrunkSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                request = new CreateByocTrunkCreateByocTrunkRequest() {{
                    cnamLookupEnabled = false;
                    connectionPolicySid = "voluptas";
                    friendlyName = "culpa";
                    fromDomainSid = "expedita";
                    statusCallbackMethod = "DELETE";
                    statusCallbackUrl = "dolor";
                    voiceFallbackMethod = "GET";
                    voiceFallbackUrl = "voluptas";
                    voiceMethod = "HEAD";
                    voiceUrl = "et";
                }};
            }};

            CreateByocTrunkResponse res = sdk.createByocTrunk(req);

            if (res.voiceV1ByocTrunk.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createByocTrunk`
* `createConnectionPolicy`
* `createConnectionPolicyTarget`
* `createDialingPermissionsCountryBulkUpdate` - Create a bulk update request to change voice dialing country permissions of one or more countries identified by the corresponding [ISO country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2)
* `createIpRecord`
* `createSourceIpMapping`
* `deleteArchivedCall` - Delete an archived call record from Bulk Export. Note: this does not also delete the record from the Voice API.
* `deleteByocTrunk`
* `deleteConnectionPolicy`
* `deleteConnectionPolicyTarget`
* `deleteIpRecord`
* `deleteSourceIpMapping`
* `fetchByocTrunk`
* `fetchConnectionPolicy`
* `fetchConnectionPolicyTarget`
* `fetchDialingPermissionsCountry` - Retrieve voice dialing country permissions identified by the given ISO country code
* `fetchDialingPermissionsSettings` - Retrieve voice dialing permissions inheritance for the sub-account
* `fetchIpRecord`
* `fetchSourceIpMapping`
* `listByocTrunk`
* `listConnectionPolicy`
* `listConnectionPolicyTarget`
* `listDialingPermissionsCountry` - Retrieve all voice dialing country permissions for this account
* `listDialingPermissionsHrsPrefixes` - Fetch the high-risk special services prefixes from the country resource corresponding to the [ISO country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2)
* `listIpRecord`
* `listSourceIpMapping`
* `updateByocTrunk`
* `updateConnectionPolicy`
* `updateConnectionPolicyTarget`
* `updateDialingPermissionsSettings` - Update voice dialing permissions inheritance for the sub-account
* `updateIpRecord`
* `updateSourceIpMapping`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
